[package]
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
name = "ads"
version = "0.2.1"
license = "MIT"
documentation = "https://docs.rs/ads"
repository = "https://github.com/MattsSe/rust-ads"
readme = "README.md"
categories = ["network"]
keywords = ["network", "automation", "protocol"]
description = """
Pure rust implementation of the Beckhoff ADS protocol.
"""
edition = "2018"

[dependencies]
bincode = "1.2"
byteorder = "1.3"
bytes = "0.4"
chrono = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
snafu = "0.5"
structopt = { version = "0.3.2", optional = true }
log = "0.4"


[features]
serde0 = ["serde"]
