[package]
authors = ["Matthias <matthias.seitz@tum.de>"]
license = "MIT"
name = "rust-ads"
version = "0.0.2"

[dependencies]
bincode = "1.0.0"
byteorder = "1.2.1"
bytes = "0.4.6"
chrono = "0.4.0"
num-derive = "0.2.0"
num-traits = "0.2.2"
serde = "1.0.34"
serde_derive = "1.0.34"

[dependencies.clippy]
optional = true
version = "*"
